--- a/03_Image_storage/aws_image_upload/image-service/.env
+++ b/03_Image_storage/aws_image_upload/image-service/.env
@@ -2,4 +2,4 @@ BUCKET_NAME=image-s3bucket-storage-next
 REGION=us-east-1
 ACCESS_KEY_ID=AKIAVALYXPL422HP2Q63
 SECRET_ACCESS_KEY=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
-TABLE_NAME=userimage
+TABLE_NAME=userimages
