--- a/03_Image_storage/aws_image_upload/image-service/package.json
+++ b/03_Image_storage/aws_image_upload/image-service/package.json
@@ -17,6 +17,7 @@
     "@middy/core": "^2.5.3",
     "@middy/http-json-body-parser": "^2.5.3",
     "aws-sdk": "^2.1195.0",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "form-data": "^4.0.0",
     "joi": "^17.6.0",
