--- a/03_Image_storage/aws_image_upload/authorization-service/package.json
+++ b/03_Image_storage/aws_image_upload/authorization-service/package.json
@@ -18,6 +18,7 @@
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.1",
     "joi": "^17.6.0",
+    "serverless-offline": "^9.3.0",
     "ts-loader": "^9.3.1"
   },
   "devDependencies": {
