--- a/03_Image_storage/aws_image_upload/authorization-service/package.json
+++ b/03_Image_storage/aws_image_upload/authorization-service/package.json
@@ -25,13 +25,19 @@
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "eslint": "^8.24.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
     "json-loader": "^0.5.7",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
     "serverless-webpack": "^5.8.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.8.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
