--- a/03_Image_storage/aws_image_upload/image-service/package.json
+++ b/03_Image_storage/aws_image_upload/image-service/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.102",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "eslint": "^8.24.0",
