--- a/04_Serverless-offline-sqs/my-service/package.json
+++ b/04_Serverless-offline-sqs/my-service/package.json
@@ -15,13 +15,16 @@
     "@middy/http-json-body-parser": "^2.5.3",
     "aws-sdk": "^2.1202.0",
     "dotenv": "^16.0.1",
+    "k6": "^0.0.0",
     "mysql": "^2.18.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^14.14.25",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "esbuild": "^0.14.11",
     "eslint": "^8.23.1",
