--- a/03_Image_storage/aws_image_upload/image-service/.env
+++ b/03_Image_storage/aws_image_upload/image-service/.env
@@ -4,4 +4,8 @@ ACCESS_KEY_ID=AKIAVALYXPL422HP2Q63
 SECRET_ACCESS_KEY=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
 TABLE_NAME=userimages
 USER_POOL_NAME=image-s3-pool
+USER_POOL_ARN=arn:aws:cognito-idp:us-east-1:344387451641:userpool/us-east-1_CIHwDAAt7
+USER_POOL_CLIENT_ID=3ebo75r6gul173m7fso9o2chka
+USER_POOL_DOMAIN=e3ygsvc037
 COGNITO_ARN=arn:aws:cognito-idp:us-east-1:344387451641:userpool/us-east-1_CIHwDAAt7
+DYNAMO_ARN=arn:aws:dynamodb:us-east-1:513578798047:table/userimages
